# mail-sender-

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/controller/: email_controller.rs  mod.rs
src/model/: models.rs
src/repository/: email_repository.rs  mod.rs
src/service/: email_service.rs
