[package]
name = "brevo_email_sender"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
dotenv = "0.15.0"
log = "0.4.27"
env_logger = "0.11.7"
